fixed base template breaking other pages;

--- a/templates/workspaces/index.html
+++ b/templates/workspaces/index.html
@@ -8,7 +8,7 @@
     <div class="row">
       <ul>
       {% for workspace in workspaces %}
-        <li> {{workspace.name}}</li>
+        <li> {{workspace.readable_name}}</li>
       {% endfor %}
       </ul>
     </div>
