--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                 <a class="nav-link" href="/login">Log In</a>
             </li>
             {% else %}
+            <li class="nav-item">
+                    <a class="nav-link" href="/workspaces">Workspaces</a>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Log Out</a>
@@ -36,7 +39,7 @@
         </ul>
 
     </nav>
-    <div>
+    <div class="main-content">
         {% for category, message in get_flashed_messages(with_categories=True) %}
         <div class="alert alert-{{ category }}">{{ message }}</div>
         {% endfor %}
