--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,7 +4,7 @@
 
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      <h2>Welcome back.</h2>
+      <h1>Welcome back</h1>
 
       <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
