Added subdomain support

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bolt</title>
-
+    <base href="http://localhost.com:5000">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
     <script src="https://unpkg.com/jquery"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
