--- a/templates/workspaces/show.html
+++ b/templates/workspaces/show.html
@@ -4,7 +4,7 @@
 
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      {{workspace.name}}
+      {{workspace.readable_name}}
 
 
 
