nav bar to the top

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,10 @@
 <body>
 
     <nav class="navbar flex-column">
-        <a class="navbar-brand"><i class="fas fa-bolt"></i></a>
-        <ul class="nav">
+        <ul class="nav mb-auto">
+            <li class="nav-item">
+                <a class="nav-link ml-auto mr-auto" href="/"><i class="fas fa-bolt"></i></a>
+            </li>
 
             {% if not g.user %}
 
