Working on homepage and routes that connect to it.

--- a/frontend/src/component/Footer.css
+++ b/frontend/src/component/Footer.css
@@ -1,5 +1,6 @@
 .Footer-cont {
-  background-color: rgb(30, 21, 76);
-  padding: 25px;
+  /* padding: 5px;
+  padding-bottom: 15px; */
+  background-color: rgb(20, 14, 49);
   color: rgb(79, 74, 200);
 }
