--- a/frontend/src/component/App.css
+++ b/frontend/src/component/App.css
@@ -3,26 +3,13 @@
   background-color: rgb(55, 45, 132);
   min-height: 100vh;
   height: 100%;
+  background-image: linear-gradient(to top, rgb(30, 21, 76), rgb(55, 45, 132));
+  font-family: 'Raleway', sans-serif;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -32,4 +19,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+button {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(237, 249, 247);
+  border: 1px solid rgb(79, 74, 200);
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 5px;
+  transition: all 0.15s ease;
+}
+
+button:hover {
+  background-color: rgb(79, 74, 200);
 }
