--- a/frontend/src/component/NavBar.css
+++ b/frontend/src/component/NavBar.css
@@ -6,12 +6,40 @@
   padding-left: 25px;
   padding-right: 25px;
   height: 40px;
+  color: rgb(191, 136, 216);
+}
+
+.NavBar-logo a.active,
+.NavBar-logo a:hover {
+  text-decoration: none;
+  color: rgb(240, 214, 79);
+}
+
+.NavBar-logo {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 18px;
+  color: rgb(237, 249, 247);
 }
 
 .NavBar-login {
   margin-right: 50px;
 }
 
-.NavBar-logo {
+.NavBar-login a:visited,
+.NavBar-getStarted a:visited {
+  color: rgb(191, 136, 216);
+}
+
+.NavBar-login a.active {
+  color: rgb(237, 249, 247);
+}
+
+.NavBar-getStarted a.active {
+  color: rgb(237, 249, 247);
+}
+
+.NavBar-login a:hover,
+.NavBar-getStarted a:hover {
+  text-decoration: none;
   color: rgb(237, 249, 247);
 }
