--- a/frontend/src/component/Workspace.css
+++ b/frontend/src/component/Workspace.css
@@ -1,4 +1,11 @@
 .Workspace {
+  display: inline-block;
+  flex-direction: column;
+  margin: 0;
+  width: 80vw;
+}
+
+.TaskColumnRow {
   display: flex;
   flex-direction: row;
 }
