--- a/frontend/src/component/App.css
+++ b/frontend/src/component/App.css
@@ -1,5 +1,5 @@
 .App {
-  /* text-align: center; */
+  text-align: center;
   background-color: rgb(55, 45, 132);
   min-height: 100vh;
   height: 100%;
