--- a/frontend/src/component/Workspace.css
+++ b/frontend/src/component/Workspace.css
@@ -1,8 +1,15 @@
 .Workspace {
   display: inline-block;
   flex-direction: column;
-  margin: 0;
-  width: 80vw;
+  position: absolute;
+  left: 200px;
+  top: 40px;
+  width: calc(100% - 200px);
+  /* height: calc(100% - 40px); */
+  height: 100vh;
+  color: rgb(191, 136, 216);
+
+  padding: 20px;
 }
 
 .TaskColumnRow {
